added entries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ dist
 dist-ssr
 coverage
 *.local
+.eslintrc.cjs
+.firebaserc
+.prettierrc.json
+firebase.json
 
 /cypress/videos/
 /cypress/screenshots/
